--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
+requests = "*"
+debugpy = "*"
 
 [dev-packages]
 
